# RoboTwin

./: .gitignore  .gitmodules  README.md  collect_data.sh  pixi.toml
assets/: background_texture  objects  (+1 more)
policy/pi05_torch/: .gitignore  README.md  deploy_policy.py  deploy_policy.yml  eval.sh  pi05_model.py  pixi.toml  pyproject.toml
policy/pi05_torch/scripts/: bash.sh  compute_norm_stats.py  convert_lerobot_stats.py  debug_dataloader_sources.py  dist_dataset_test.py  fix_parquet_metadata.py  fsdp.md  fsdp2.md  inference.py  inference_airbot.py  inference_libero.py  test_align.ipynb  train_pytorch.py  train_pytorch_fsdp.py  train_pytorch_fsdp_robotwin.py
policy/pi05_torch/src/pi/: __init__.py  data.py  ema_model.py  inference_buffer_v2.py  transforms.py
policy/pi05_torch/src/pi/models/: gemma.py  model.py  pi_config.py  tokenizer.py
policy/pi05_torch/src/pi/models/gemma_/: configuration_gemma.py  modeling_gemma.py
policy/pi05_torch/src/pi/models/paligemma/: modeling_paligemma.py
policy/pi05_torch/src/pi/models/siglip/: modeling_siglip.py
policy/pi05_torch/src/pi/models_pytorch/: gemma_pytorch.py  pi0_pytorch.py  preprocessing_pytorch.py
policy/pi05_torch/src/pi/policies/: airbot_policy.py  aloha_policy.py  base_policy.py  droid_policy.py  libero_policy.py  policy.py  policy_config_torch.py  robotwin_policy.py
policy/pi05_torch/src/pi/services/: ws_json_api.py
policy/pi05_torch/src/pi/shared/: download.py  image_tools.py  normalize.py
policy/pi05_torch/src/pi/training/: checkpoints.py  config.py  data_loader.py  droid_rlds_dataset.py  optimizer.py
(+16 files in other folders)
